--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta property="og:title" content="helo" />
-    <meta property="og:type" content="video" />
-    <meta property="og:url" content="myroute" />
-    <meta property="og:video" content="" />
+
+    <!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://user-agent-five.vercel.app">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Ananas Frais">
+<meta property="og:description" content="Du bon ananas frais sans engrais et autres ">
+<meta property="og:image" content="https://cdn.pixabay.com/photo/2015/09/16/08/55/online-942408_960_720.jpg">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="user-agent-five.vercel.app">
+<meta property="twitter:url" content="https://user-agent-five.vercel.app">
+<meta name="twitter:title" content="Ananas Frais">
+<meta name="twitter:description" content="Du bon ananas frais sans engrais et autres">
+<meta name="twitter:image" content="https://cdn.pixabay.com/photo/2015/09/16/08/55/online-942408_960_720.jpg">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <title>Tiksell publication</title>
 </head>
 <body>
