--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -10,7 +10,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Ananas Frais">
 <meta property="og:description" content="Du bon ananas frais sans engrais et autres ">
-<meta property="og:image" content="https://cdn.pixabay.com/photo/2015/09/16/08/55/online-942408_960_720.jpg">
+<meta property="og:image" content="https://i.ibb.co/BVqCZMB/vacances.jpg">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -18,7 +18,7 @@
 <meta property="twitter:url" content="https://user-agent-five.vercel.app">
 <meta name="twitter:title" content="Ananas Frais">
 <meta name="twitter:description" content="Du bon ananas frais sans engrais et autres">
-<meta name="twitter:image" content="https://cdn.pixabay.com/photo/2015/09/16/08/55/online-942408_960_720.jpg">
+<meta name="twitter:image" content="https://i.ibb.co/BVqCZMB/vacances.jpg">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <title>Tiksell publication</title>
