--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -7,18 +7,18 @@
 
     <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://user-agent-five.vercel.app">
-<meta property="og:type" content="website">
+<meta property="og:type" content="video">
 <meta property="og:title" content="Ananas Frais">
 <meta property="og:description" content="Du bon ananas frais sans engrais et autres ">
-<meta property="og:image" content="https://i.ibb.co/y8wvM1J/vacances-mini.jpg">
+<meta property="og:video" content="https://giovanus.xyz/1imer.mp4">
 
-<!-- Twitter Meta Tags -->
+<!-- Twitter Meta Tags
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="user-agent-five.vercel.app">
 <meta property="twitter:url" content="https://user-agent-five.vercel.app">
 <meta name="twitter:title" content="Ananas Frais">
 <meta name="twitter:description" content="Du bon ananas frais sans engrais et autres">
-<meta name="twitter:image" content="https://i.ibb.co/y8wvM1J/vacances-mini.jpg">
+<meta name="twitter:image" content="https://i.ibb.co/y8wvM1J/vacances-mini.jpg"> -->
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
     <title>Tiksell publication</title>
