--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -7,11 +7,11 @@
 
     <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://user-agent-five.vercel.app">
-<meta property="og:type" content="video">
-<meta property="og:title" content="Ananas Frais">
+<meta property="og:type" content="video.other">
+<meta property="og:title" content="De l'ananas">
 <meta property="og:description" content="Du bon ananas frais sans engrais et autres ">
 <meta property="og:video" content="https://giovanus.xyz/1imer.mp4">
-
+<meta name="twitter:image" content="https://i.ibb.co/y8wvM1J/vacances-mini.jpg">
 <!-- Twitter Meta Tags
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="user-agent-five.vercel.app">
