--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -8,10 +8,10 @@
     <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://user-agent-five.vercel.app">
 <meta property="og:type" content="website">
-<meta property="og:title" content="De l'ananas">
+<meta property="og:title" content="De l'ananase">
 <meta property="og:description" content="Du bon ananas frais sans engrais et autres ">
-<!-- <meta property="og:video" content="https://giovanus.xyz/1imer.mp4"> -->
-<!-- <meta name="og:image" content="https://i.ibb.co/y8wvM1J/vacances-mini.jpg"> -->
+<meta property="og:video" content="https://giovanus.xyz/1imer.mp4">
+<meta name="og:image" content="https://giovanus.xyz/poupee.jpg">
 <!-- Twitter Meta Tags
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="user-agent-five.vercel.app">
